# co-jao

./: .env.local  .gitignore  DEPLOYMENT.md  DEPLOYMENT_SETUP.md  README.md  deploy.sh  fresh-deploy.sh  pyproject.toml  run-tests.sh  run_update_vacancies.sh  terraform.tfstate  test-file.txt
jao-backend/: Dockerfile  Procfile  Procfile.jupyter  README.md  docker-compose.base.yml  example.docker.env  example.env  package-lock.json  package.json  pyproject.toml  test_redis_connection.py  webpack.config.js
jao-backend-schemas/: README.md  pyproject.toml
jao-backend-schemas/src/jao_backend_schemas/: advice.py  celery.py  ingest.py  maps.py  plots.py  vacancies.py
jao-backend/docs/: DEVELOPMENT.md  generate_modules.py
jao-backend/docs/source/: accessibility.md  conf.py  development.rst  index.rst
jao-backend/docs/source/adr/: 0006-implement-text-linting-and-checking.rst  0007-addendum-to-textspan-adr-0006.rst
jao-backend/src/: asgi.py  manage.py  urls.py  wsgi.py
jao-backend/src/jao_backend/: scripts.py
jao-backend/src/jao_backend/advice/: advice.py
jao-backend/src/jao_backend/api/: apps.py  auth.py  endpoints.py  urls.py
jao-backend/src/jao_backend/api/v0/: README.md  endpoints.py
jao-backend/src/jao_backend/application_statistics/: README.md  admin.py  apps.py
jao-backend/src/jao_backend/application_statistics/ingest_schemas/: django_schema.py
jao-backend/src/jao_backend/application_statistics/migrations/: 0001_initial.py  0002_initial.py
jao-backend/src/jao_backend/application_statistics/models/: __init__.py  lists.py  statistics.py
jao-backend/src/jao_backend/common/: admin.py  apps.py  celery.py  fields.py  models.py  querysets.py  util.py
jao-backend/src/jao_backend/common/celery/: __init__.py  active_singleton.py  celery_app.py  locking.py  monitoring.py
jao-backend/src/jao_backend/common/db/: connections.py
jao-backend/src/jao_backend/common/db/fields/: __init__.py  (+1 more)
jao-backend/src/jao_backend/common/litellm/: model_list.py
jao-backend/src/jao_backend/common/management/: helpers.py
jao-backend/src/jao_backend/common/middleware/: admin_security.py
jao-backend/src/jao_backend/common/migrations/: 0001_initial_enable_pgvector.py
jao-backend/src/jao_backend/common/routers/: router.py
jao-backend/src/jao_backend/common/tests/: test_uuid7.py
jao-backend/src/jao_backend/common/text_processing/: clean_bbcode.py  clean_oleeo.py
jao-backend/src/jao_backend/departments/: README.md  admin.py  apps.py  models.py
jao-backend/src/jao_backend/departments/migrations/: 0001_initial.py
jao-backend/src/jao_backend/embeddings/: admin.py  apps.py  chunking.py  forms.py  models.py  querysets.py  service.py  signals.py  tasks.py
jao-backend/src/jao_backend/embeddings/migrations/: 0001_initial.py
jao-backend/src/jao_backend/embeddings/tests/: test_embedding.py  test_service.py
jao-backend/src/jao_backend/healthcheck/: apps.py  urls.py
jao-backend/src/jao_backend/home/: apps.py  views.py
jao-backend/src/jao_backend/ingest/: README.md  apps.py  fields.py  forms.py  tasks.py  urls.py  views.py
jao-backend/src/jao_backend/ingest/ingester/: helpers.py  ingest_aggregated_applicants.py  ingest_vacancies.py  oleeo_ingest.py  schema_registry.py
jao-backend/src/jao_backend/inline_exceptions/: apps.py  views.py
jao-backend/src/jao_backend/inline_exceptions/templates/: problem_details.html
jao-backend/src/jao_backend/inline_exceptions/templatetags/: inline_exceptions_tags.py
jao-backend/src/jao_backend/oleeo/: README.md  apps.py  base_models.py  base_querysets.py  errors.py  models.py  querysets.py  sync_primitives.py
jao-backend/src/jao_backend/oleeo/ingest_schemas/: ingest_schema.py  oleeo_schema.py  oleeo_schema_registry.py
jao-backend/src/jao_backend/oleeo/migrations/: 0001_initial.py
jao-backend/src/jao_backend/oleeo/tests/: __init__.py  apps.py  factories.py  fixtures.py  models.py  test_baseline.py  test_upstreammodel_synchronisation.py
jao-backend/src/jao_backend/roles/: README.md  admin.py  apps.py  enums.py  models.py  querysets.py
jao-backend/src/jao_backend/roles/ingest_schemas/: django_schema.py  ingest_schema.py
jao-backend/src/jao_backend/roles/migrations/: 0001_initial.py  0002_alter_grade_options.py
jao-backend/src/jao_backend/settings/: __init__.py  common.py  dev.py  production.py  test.py
jao-backend/src/jao_backend/settings/tests/: runner.py
jao-backend/src/jao_backend/tests/test_checkers/: test_acronym.py
jao-backend/src/jao_backend/tests/unit/: test_textspan_unit.py
jao-backend/src/jao_backend/text/: check.py  jupyter_helpers.py  re_helpers.py  services.py  textspan.py  wordcollection.py
jao-backend/src/jao_backend/text/checker/: acronym.py  list_format.py
jao-backend/src/jao_backend/vacancies/: README.md  admin.py  apps.py  embed.py  models.py  querysets.py  tasks.py
jao-backend/src/jao_backend/vacancies/ingest_schemas/: django_schema.py
jao-backend/src/jao_backend/vacancies/migrations/: 0001_initial.py  0002_vacancy_grades_vacancy_role_types.py  0003_vacancy_person_spec_and_more.py
jao-backend/src/jao_backend/vacancies/tests/: factories.py  test_vacancy_embedding.py
jao-web/: .gitignore  Dockerfile  README.md  docker-compose.base.yml  example.env  package-lock.json  package.json  pyproject.toml  vitest.config.js  webpack.config.js
jao-web/doc/: DEVELOPMENT.md
jao-web/src/: asgi.py  manage.py  urls.py  wsgi.py
jao-web/src/jao_web/common/: apps.py
jao-web/src/jao_web/home/: apps.py  views.py
jao-web/src/jao_web/inline_exceptions/: apps.py  urls.py
jao-web/src/jao_web/inline_exceptions/templatetags/: inline_exceptions_tags.py
jao-web/src/jao_web/job_advert_optimiser/: advice_choices.py  apps.py  forms.py  helpers.py  urls.py  views.py
jao-web/src/jao_web/job_advert_optimiser/services/: client.py  helpers.py  problem_details.py  services.py
jao-web/src/jao_web/job_advert_optimiser/tests/: conftest.py  test_service_client.py  test_views.py
jao-web/src/jao_web/settings/: common.py  dev.py  production.py  test.py
jao-web/src/jao_web/settings/tests/: runner.py
(+108 files in other folders)
