[tool.poetry]
name = "recruitmentcopilot-all"
version = "0.1.0"
description = ""
authors = ["Anthoni Gleeson <anthoni.gleeson@digital.trade.gov.uk>", "Stuart Axon <stuart.axon@digital.cabinet-office.gov.uk>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4"
jao-notebook = { path = "notebooks", develop = true, optional = true }
jao-web = { path = "jao-web", develop = true, extras = ["all"] }
jao-backend = { path = "jao-backend", develop = true, extras = ["all"] }
recruitmentcopilot = { path = "recruitmentcopilot", develop = true, extras = ["all"] }
flower = { version = "^2.0.1", optional = true }
honcho = "^2.0.0"

[tool.poetry.extras]
notebooks = ["jao-notebook"]
flower = ["flower"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
isort = "^5.12.0"
black = "^23.7.0"
openmock = "^3.0.1"

[tool.black]
preview = true
# https://black.readthedocs.io/en/stable/the_black_code_style/future_style.html
enable-unstable-feature = ["string_processing"]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
force_single_line = true
