[tool.poetry]
name = "jao-backend-schemas"
version = "0.1.0"
description = "Pydantic schemas to communicate with jao-backend"
authors = ["Stuart Axon <stuart.axon@digital.cabinet-office.gov.uk>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "jao_backend_schemas", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.8.2"
plotly = "^5.22.0"
celery = { version = "^5.4.0", optional = true}

[tool.poetry.extras]
celery = ["celery"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
